# keifu

./: Cargo.toml  README.md  README_JA.md  cliff.toml
.github/workflows/: ci.yaml  release.yaml
docs/: README_JA.md
src/: action.rs  app.rs  event.rs  keybindings.rs  lib.rs  main.rs  search.rs
src/git/: branch.rs  diff.rs  graph.rs  operations.rs
src/graph/: colors.rs  mod.rs
src/ui/: commit_detail.rs  dialog.rs  graph_view.rs  help_popup.rs  mod.rs  search_dropdown.rs  status_bar.rs
tests/: graph_test.rs
