[package]
name = "keifu"
version = "0.1.5"
edition = "2021"
description = "A TUI tool to visualize Git commit graphs with branch genealogy"
license = "MIT"
authors = ["trasta298"]
repository = "https://github.com/trasta298/keifu"
readme = "README.md"
keywords = ["git", "tui", "cli", "graph", "visualization"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git
git2 = "0.19"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

# Search
fuzzy-matcher = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
