[package]
name = "keifu"
version = "0.2.2"
edition = "2021"
description = "A TUI tool to visualize Git commit graphs with branch genealogy"
license = "MIT"
authors = ["trasta298"]
repository = "https://github.com/trasta298/keifu"
readme = "README.md"
keywords = ["git", "tui", "cli", "graph", "visualization"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

# Search
fuzzy-matcher = "0.3"

# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# Clipboard
arboard = "3.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
